# ddmy

./: README.md  main.py  main.spec  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/common/: config.py  request.py  resource.py  signal_bus.py  tools.py
src/components/: book_card.py  loading.py  network_image_viewer.py
src/data/entities/: base_book.py
src/data/entities/rule/: book_info_rule.py  book_list_rule.py  content_rule.py  explore_kind.py  explore_rule.py  search_rule.py  toc_rule.py
src/data/model/analyze_rule/: analyze_by_json_path.py  analyze_by_jsoup.py  analyze_by_regex.py  analyze_by_xpath.py  analyze_rule.py  rule_data_interface.py
src/layout/: card.py  layout.py
src/resource/: resource.qrc
src/resource/sources/: novel_sources.json
src/views/: view.py
src/views/download/: download.py  download.ui  ui_download.py
src/views/hide/: TODO.md  hide.py  wv_widget.py
src/views/home/: home.py  home.ui  ui_home.py
src/views/live/: live.py  live.ui  ui_live.py
src/views/novel/: novel.py  novel.ui  ui_novel.py
src/views/novel/data/entities/: explore_entity.py  source_entity.py
src/views/novel/data_class/: category.py  content.py  explore.py  source.py  toc.py
src/views/novel/utils/: TODO.md  analyze_rule.py  content_parse.py  jsoup_to_parsel.py  rule_data_interface.py  rule_parse.py  u_content.py  u_explore.py  u_manager.py  utils.py
src/views/photo/: photo.py  photo.ui  ui_photo.py
src/views/settings/: settings.py  settings.ui  ui_settings.py
src/views/video/: ui_video.py  video.py  video.ui
(+37 files in other folders)
