[project]
name = "ddmy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "parsel>=1.9.1",
    "pyinstaller>=6.11.1",
    "pyside6-fluent-widgets[full]>=1.7.2",
    "qasync>=0.27.1",
    "setuptools>=75.5.0",
    "webviewpy>=1.4.0",
]
